[gd_scene load_steps=6 format=3 uid="uid://bgm1rdglwaad5"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_k1qef"]
[ext_resource type="Script" path="res://ui/power/power_card.gd" id="2_i2460"]
[ext_resource type="Texture2D" uid="uid://bmpm2kp3lr23y" path="res://assets/icons/castle.png" id="2_volv3"]
[ext_resource type="Texture2D" uid="uid://bxqvi5615lj3b" path="res://assets/icons/trident.png" id="3_kq5p4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1ma0"]
bg_color = Color(0.458824, 0.345098, 0.32549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1875, 0.21875, 0.261719, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PowerCard" type="PanelContainer"]
custom_minimum_size = Vector2(125, 0)
offset_right = 125.0
offset_bottom = 165.0
pivot_offset = Vector2(62.5, 82.5)
theme = ExtResource("1_k1qef")
theme_override_styles/panel = SubResource("StyleBoxFlat_t1ma0")
script = ExtResource("2_i2460")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PowerName" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sink"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"GoldPanel"

[node name="PowerIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_volv3")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PowerDescription" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Build a fort. The fort defends against 20 units when attacked."
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cost"

[node name="PowerCost" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"

[node name="Faith" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_kq5p4")
expand_mode = 5
stretch_mode = 5
